--- a/app/src/main/res/values/settings_keys.xml
+++ b/app/src/main/res/values/settings_keys.xml
@@ -89,7 +89,7 @@
     <string name="start_main_player_fullscreen_key">start_main_player_fullscreen_key</string>
 
     <string name="autoplay_key">autoplay_key</string>
-    <string name="autoplay_value">@string/autoplay_wifi_key</string>
+    <string name="autoplay_value">@string/autoplay_never_key</string>
     <string name="autoplay_always_key">autoplay_always_key</string>
     <string name="autoplay_wifi_key">autoplay_wifi_key</string>
     <string name="autoplay_never_key">autoplay_never_key</string>
@@ -120,7 +120,7 @@
     </string-array>
 
     <string name="default_resolution_key">default_resolution</string>
-    <string name="default_resolution_value">720p60</string>
+    <string name="default_resolution_value">720p</string>
     <string name="show_higher_resolutions_key">show_higher_resolutions</string>
     <string name="default_popup_resolution_key">default_popup_resolution</string>
     <string name="default_popup_resolution_value">480p</string>
